# Auto_review

./: .gitignore  CLAUDE.md  GITHUB_SYNC_CHECKLIST.md  README.md
desktop_app/: HANDOFF.md  PACKAGING.md  README.md  conftest.py  pyproject.toml  requirements.txt
desktop_app/frontend/: api.js  app.js  i18n.js  index.html  styles.css  ui.js
desktop_app/frontend/i18n/: en.js  zh.js
desktop_app/frontend/views/: elements_search.js  elements_stats.js  figures.js  groups.js  import.js  map.js  network.js  papers.js  settings.js  writing.js
desktop_app/packaging/: autoreview.spec  build.ps1
desktop_app/scripts/: backfill_authorship_from_pdf.py  enrich_institution_countries.py
desktop_app/tests/: _element_fixtures.py  _fake_ai.py  _fake_transport.py  _library_fixtures.py  _pdf_helpers.py  test_ai_client.py  test_ai_stages.py  test_api.py  test_api_angles.py  test_api_authorship.py  test_api_browse.py  test_api_decomposition.py  test_api_discovery.py  test_api_elements.py  test_api_figures.py  test_api_groups.py  test_api_import.py  test_api_map.py  test_api_refine.py  test_api_settings.py  test_api_writing_check.py  test_api_writing_draft.py  test_authorship.py  test_authorship_fallback.py  test_config.py  test_config_connection.py  test_crossref_source.py  test_decomposition.py  test_docling_json.py  test_download.py  test_draft_runner.py  test_edges.py  test_elements_service.py  test_engine_bridge.py  test_engine_bridge_import.py  test_group_cluster.py  test_group_identity.py  test_group_store.py  test_groups_populate.py  test_i18n_dicts.py  (+29 more)
paper_pool/: .gitignore  (+4 more)
(+206 files in other folders)
