[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autoreview-app"
version = "0.1.0"
description = "Auto Review desktop app (local FastAPI + pywebview over the Document Decomposer engine)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pywebview>=5.0",
    "pymupdf>=1.24",
    "keyring>=24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
autoreview = "autoreview_app.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
